feat(notes): CRUD for notes

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -30,6 +30,15 @@
   &-block {
     width: 100%;
   }
+
+  &-danger {
+    background-color: red;
+    transition: background-color o.3s ease;
+
+    &:hover {
+      background-color: darken($color: red, $amount: 10);
+    }
+  }
 }
 
 .google-btn {
