--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -1,7 +1,9 @@
 .journal {
+
   &__main-content {
     display: flex;
   }
+
   &__sidebar {
     background-color: $dark-grey;
     color: white;
@@ -19,6 +21,7 @@
       font-weight: lighter;
     }
   }
+
   &__new-entry {
     align-items: center;
     cursor: pointer;
@@ -34,38 +37,47 @@
       color: darken($color: white, $amount: 20);
     }
   }
+
   &__entries {
     margin-top: 30px;
     flex: 1 1 auto;
     overflow-y: scroll;
   }
+
   &__entry {
     background-color: white;
     border-radius: 4px;
     color: $dark-grey;
     display: flex;
+    justify-content: space-between;
     margin-bottom: 10px;
     overflow: hidden;
+
     &-picture {
       height: 75px;
       width: 75px;
     }
+
     &-title {
       font-size: 14px;
       font-weight: bold;
     }
+
     &-body {
       padding: 10px;
     }
+
     &-content {
       font-size: 10px;
     }
+
     &-date-box {
       align-items: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       padding: 5px;
+
       span {
         font-size: 12px;
       }
