--- a/src/styles/components/_notes.scss
+++ b/src/styles/components/_notes.scss
@@ -47,5 +47,7 @@
   &__image img{
     box-shadow: 5px 5px $dark-grey;
     height: 150px;
+    margin-left: 15px;
+    margin-bottom: 10px;
   }
 }
